--- a/main_site/templates/join.html
+++ b/main_site/templates/join.html
@@ -1,6 +1,7 @@
 
-    {% extends "base.html" %}
-    {% load static %}
+{% extends "base.html" %}
+{% load static %}
+{% load socialaccount %}
 
 {% block page_content %}
 
@@ -15,6 +16,12 @@
             <div class="row">
               <div class="col-sm-6">
                 <div class="form-group">
+                  {% comment %} <h1>My Google OAuth Project </h1> {% endcomment %}
+                  {% if user.is_authenticated %}
+                    <p>Welcome, You are logged in as {{ user.username }}</p>
+                  {% else %}
+                    <a href="{% provider_login_url 'google' %}">Login With Google</a>
+                  {% endif %}
                   <label for="reg-fn">First Name</label>
                   <input class="form-control" type="text" required id="reg-fn">
                   <div class="invalid-feedback">Please enter your first name!</div>
