--- a/main_site/templates/base.html
+++ b/main_site/templates/base.html
@@ -24,6 +24,8 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
     <link rel="stylesheet" media="screen"  href=" {% static '/css/vendor.min.css' %}">
+    <link rel="stylesheet" media="screen"  href=" {% static '/css/style.css' %}">
+
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" media="screen" href=" {% static '/css/theme.min.css' %}">
     <!-- Google Tag Manager-->
@@ -487,7 +489,13 @@
               <ul class="navbar-buttons d-inline-block align-middle">
                 <li class="d-block d-lg-none"><a href="#mobile-menu" data-toggle="offcanvas"><i class="fe-icon-menu"></i></a></li>
                 <li><a href="#" data-toggle="search"><i class="fe-icon-search"></i></a></li>
-              </ul><a class="btn btn-gradient ml-3 d-none d-xl-inline-block" href="{% url 'join' %}" target="">Apply Now</a>
+              </ul>Hello, {{ user.username|default:'Guest' }}! <a class="btn btn-gradient ml-3 d-none d-xl-inline-block" href="{% url 'join' %}" target="">Apply Now</a>
+              {% if user.is_authenticated %}
+                  <a class="btn btn-gradient ml-3 d-none d-xl-inline-block" href="{% url 'logout' %}" target="">Logout</a>
+              {% else %}
+                  <a class="btn btn-gradient ml-3 d-none d-xl-inline-block" href="{% url 'login' %}" target="">Login</a>
+
+              {% endif %}
             </div>
           </div>
         </div>
