--- a/user/templates/registration/join.html
+++ b/user/templates/registration/join.html
@@ -1,45 +1,85 @@
 
 {% extends "base.html" %}
 {% load static %}
-
+{% comment %} {% load socialaccount %} {% endcomment %}
 
 {% block page_content %}
 
   <div class="container mb-3">
     <div class="row">
-      <div class="col-md-3"></div>
+      <div class="col-md-6 pb-5">
+        
+        <form class="needs-validation wizard" method="POST" >
+         <div class="wizard-body pt-2">
+            <div class="d-sm-flex justify-content-between pb-2"><a class="btn btn-secondary btn-sm btn-block my-2 mr-3" href="#"><i class="socicon-facebook"></i>&nbsp;register</a><a class="btn btn-secondary btn-sm btn-block my-2 mr-3" href="#"><i class="socicon-twitter"></i>&nbsp;register</a><a class="btn btn-secondary btn-sm btn-block my-2 mr-3" href="#"><i class="socicon-linkedin"></i>&nbsp;register</a></div>
+            <hr>
+            <h3 class="h5 pt-4 pb-2">Or using form below</h3>
+            <div class="row">
+              <div class="col-sm-12">
+                {% if form.errors %}
+                  <div class="alert alert-danger" role="alert">
+                    {{form.errors}}
+                </div>
+                {% endif %}
+                
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  
+                  <label for="reg-fn"> Username</label>
+                    {{ form.username }}
+                  
+                  <div class="invalid-feedback">Please enter your first name!</div>
+                </div>
+              </div>
+             
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="reg-email">E-mail Address</label>
+                    {{ form.email }}
 
-      <div class="col-md-6 pb-5 pt-30 ml-30">
-       <form class="needs-validation wizard" novalidate>
-            <div class="wizard-body pt-2">
-              {% comment %} <div class="d-sm-flex justify-content-between pb-2"><a class="btn btn-secondary btn-sm btn-block my-2 mr-3" href="#"><i class="socicon-facebook"></i>&nbsp;Login</a><a class="btn btn-secondary btn-sm btn-block my-2 mr-3" href="#"><i class="socicon-twitter"></i>&nbsp;Login</a><a class="btn btn-secondary btn-sm btn-block my-2 mr-3" href="#"><i class="socicon-linkedin"></i>&nbsp;Login</a></div> {% endcomment %}
-              <hr>
-              <h3 class="h5 pt-4 pb-2">Login to your Account</h3>
-              <div class="input-group form-group">
-                <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-mail"></i></span></div>
-                <input class="form-control" type="email" placeholder="Email" required>
-                <div class="invalid-feedback">Please enter your email!</div>
+                    
+                  <div class="invalid-feedback">Please enter valid email address!</div>
+                </div>
               </div>
-              <div class="input-group form-group">
-                <div class="input-group-prepend"><span class="input-group-text"><i class="fe-icon-lock"></i></span></div>
-                <input class="form-control" type="password" placeholder="Password" required>
-                <div class="invalid-feedback">Please enter valid password!</div>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="reg-phone">Password</label>
+                  {{ form.password1 }}
+
+                  <div class="invalid-feedback">Please enter your phone number!</div>
+                </div>
               </div>
-              <div class="d-flex flex-wrap justify-content-between">
-                <div class="custom-control custom-checkbox">
-                  <input class="custom-control-input" type="checkbox" checked id="remember-me">
-                  <label class="custom-control-label" for="remember-me">Remember me</label>
-                </div><a class="navi-link" href="account-password-recovery.html">Forgot password?</a>
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <label for="reg-phone">Confirm Password</label>
+                  {{ form.password2 }}
+                  <div class="invalid-feedback">Please enter your phone number!</div>
+                </div>
               </div>
+            
             </div>
-            <div class="wizard-footer text-right">
-              <button class="btn btn-primary" type="submit">Login</button>
-            </div>
-          </form>
+            
+          </div> 
+          {% csrf_token %}
+      
+
+          {% comment %} {% for field in form %}
+              {{field.label}}
+              {{field}}
+
+          
+          {% endfor %} {% endcomment %}
+
+          {% comment %} {{ form.as_p }} {% endcomment %}
+          <div class="wizard-footer text-right">
+            <input class="btn btn-primary" type="submit" name="userSubmit" value="Create Account"/>
+          </div>
+        </form>
       </div>
-      <div class="col-md-3"></div>
-
-      {% comment %} <div class="col-md-6 pb-0">
+      <div class="col-md-6 pb-0">
       
               <section class="container py-0 my-0 my-md-0" id="services">
                   <!-- <h2 class="h3 block-title text-center">We provide tranings in</h2> -->
@@ -103,7 +143,7 @@
                 </section>
             <!-- </div> -->
         
-      </div> {% endcomment %}
+      </div>
     </div>
   </div>
 
