--- a/main_site/templates/about.html
+++ b/main_site/templates/about.html
@@ -10,7 +10,7 @@
       <div class="bg-parallax-img" data-parallax="{&quot;y&quot; : 100}"><img src="/img/pages/about-hero-bg.png" alt="Parallax Background"/>
       </div>
       <div class="container bg-parallax-content py-5 my-3 text-center">
-        <h1 class="pb-4"><span class='d-block h3 font-family-body font-weight-light text-muted mb-2'>Building</span>Equity<span class='d-block h2 font-weight-normal text-muted mt-3'>for Women in the Tech Industry</span></h1><a class="scroll-to btn btn-gradient" href="/join/">Join</a>
+        <h1 class="pb-4"><span class='d-block h3 font-family-body font-weight-light text-muted mb-2'>Building</span>Equity<span class='d-block h2 font-weight-normal text-muted mt-3'>for Women in the Tech Industry</span></h1><a class="scroll-to btn btn-gradient" href="{% url 'join' %}">Join</a>
       </div>
     </section>
     <!-- Services-->
