--- a/main_site/templates/home.html
+++ b/main_site/templates/home.html
@@ -14,7 +14,7 @@
             <h1 class="h2 block-title">Closing the gender gap, helping women embrace Technology.</h1>
             <p class="text-lg text-muted pt-3 d-block d-md-none d-lg-block">The organization focuses on 4 primary areas that are a call for action: Education, Entrepreneurialism, Social Inclusion, Science & Innovation. The aim is to educate, equip and empower women and girls with the necessary skills and confidence to succeed in STEM career fields.
             </p>
-            <div class="pt-3"><a class="scroll-to btn btn-primary mr-3 mb-3" href="">I'm interested</a><a class="btn btn-accent mb-3" href="">Contact Us</a></div>
+            <div class="pt-3"><a class="scroll-to btn btn-primary mr-3 mb-3" href="{% url 'join' %}">I'm interested</a><a class="btn btn-accent mb-3" href="">Contact Us</a></div>
           </div>
           <div class="col-xl-5 col-md-6"><img class="d-block mx-auto" src="{% static 'img/homepages/marketing-seo/hero-img.png' %} " alt="CreateX Marketing"></div>
         </div>
