--- a/main_site/templates/base.html
+++ b/main_site/templates/base.html
@@ -62,7 +62,7 @@
         <div class="accordion mobile-menu" id="accordion-menu">
           <!-- Home-->
           <div class="card">
-            <div class="card-header"><a class="mobile-menu-link active" href="/">Home</a><a class="collapsed" href="#home-submenu" data-toggle="collapse"></a></div>
+            <div class="card-header"><a class="mobile-menu-link active" href="{% url 'home' %}">Home</a><a class="collapsed" href="#home-submenu" data-toggle="collapse"></a></div>
             <!-- <div class="collapse" id="home-submenu" data-parent="#accordion-menu">
               <div class="card-body">
                 <ul>
@@ -250,7 +250,7 @@
     <!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page.-->
     <header class="navbar-wrapper navbar-boxed navbar-sticky">
       <div class="container-fluid">
-        <div class="d-table-cell align-middle pr-md-3"><a class="navbar-brand mr-1" href="{% url 'home' %}"><strong>SheNovates</strong></a></div>
+        <div class="d-table-cell align-middle pr-md-3"><a class="navbar-brand mr-1" href="{% url 'home' %}"><strong><img src="{% static 'img/logo/shenovate2.png' %}"/></strong></a></div>
         <div class="d-table-cell w-100 align-middle pl-md-3">
           <div class="navbar justify-content-end justify-content-lg-between">
             <!-- Search-->
@@ -308,7 +308,7 @@
                   </div>
                 </div> -->
               </li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About </a></li>
 
               <!-- Portfolio-->
               <!--  
