--- a/user/templates/registration/join.html
+++ b/user/templates/registration/join.html
@@ -46,6 +46,14 @@
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
+                  <label for="reg-phone">Phone</label>
+                  <input class="form-control" name="phone" type="number" />
+
+                  <div class="invalid-feedback">Please enter your phone number!</div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="form-group">
                   <label for="reg-phone">Password</label>
                   {{ form.password1 }}
 
