--- a/user/templates/registration/profile.html
+++ b/user/templates/registration/profile.html
@@ -4,17 +4,21 @@
 
 {% block page_content %}
     <!-- Page Title-->
-    <div class="page-title d-flex" aria-label="Page title" style="background-image: url(img/page-title/shop-pattern.jpg);">
+    <div class="page-title d-flex" aria-label="Page title" style="background-image: url({% static 'img/page-title/shop-pattern.jpg' %});">
       <div class="container text-left align-self-center">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a>
+            <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a>
             </li>
-            <li class="breadcrumb-item"><a href="account-orders.html">Account</a>
+            <li class="breadcrumb-item"><a href="{% url 'profile' %}">dashboard</a>
             </li>
           </ol>
         </nav>
-        <h1 class="page-title-heading">Hello, {{ user.username }}!</h1>
+        <h1 class="page-title-heading"> {% if messages %}
+                {% for message in messages %}
+                  {% if message.tags%}<div  class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>{% endif %}
+                {% endfor %}
+              {% endif %} Hello, {{ user.username }}!</h1>
       </div>
     </div>
     <!-- Page Content-->
@@ -23,7 +27,7 @@
         <div class="col-lg-4 pb-5">
           <!-- Account Sidebar-->
           <div class="author-card pb-3">
-            <div class="author-card-cover" style="background-image: url(img/widgets/author/cover.jpg);"><a class="btn btn-light btn-sm" href="#" data-toggle="tooltip" title="You currently have 290 Reward points to spend"><i class="fe-icon-award text-md"></i>&nbsp;290 points</a></div>
+            <div class="author-card-cover" style="background-image: url(img/widgets/author/cover.jpg);"><a class="btn btn-light btn-sm" href="#" data-toggle="tooltip" title="Copy Writting"><i class="fe-icon-award text-md"></i>&nbsp; Copy Writting</a></div>
             <div class="author-card-profile">
               <div class="author-card-avatar"><img src="{% static 'img/account/avatar.png' %}" alt="Daniel Adams"/>
               </div>
@@ -33,22 +37,22 @@
             </div>
           </div>
           <div class="wizard">
-            <nav class="list-group list-group-flush"><a class="list-group-item" href="account-orders.html">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
-                    <div class="d-inline-block font-weight-medium text-uppercase">Orders List</div>
-                  </div><span class="badge badge-secondary">6</span>
-                </div></a><a class="list-group-item active" href="account-profile.html"><i class="fe-icon-user text-muted"></i>Profile Settings</a><a class="list-group-item" href="account-address.html"><i class="fe-icon-map-pin text-muted"></i>Addresses</a><a class="list-group-item" href="account-wishlist.html">
+              <nav class="list-group list-group-flush">
+                <a class="list-group-item" href="account-orders.html">
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
+                      <div class="d-inline-block font-weight-medium text-uppercase">Profile</div>
+                    </div>
+                    <span class="badge badge-secondary">6</span>
+                  </div>
+                </a>
+                <a class="list-group-item active" href="account-profile.html"><i class="fe-icon-user text-muted"></i>Profile Settings</a><a class="list-group-item" href="account-wishlist.html">
                 <div class="d-flex justify-content-between align-items-center">
                   <div><i class="fe-icon-heart mr-1 text-muted"></i>
-                    <div class="d-inline-block font-weight-medium text-uppercase">My Wishlist</div>
+                    <div class="d-inline-block font-weight-medium text-uppercase">My Courses </div>
                   </div><span class="badge badge-secondary">3</span>
-                </div></a><a class="list-group-item" href="account-tickets.html">
-                <div class="d-flex justify-content-between align-items-center">
-                  <div><i class="fe-icon-tag mr-1 text-muted"></i>
-                    <div class="d-inline-block font-weight-medium text-uppercase">My Tickets</div>
-                  </div><span class="badge badge-secondary">4</span>
-                </div></a></nav>
+                </div></a>
+              </nav>
           </div>
         </div>
         <!-- Profile Settings-->
@@ -57,24 +61,36 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="account-fn">First Name</label>
-                <input class="form-control" type="text" id="account-fn" value="Daniel" required>
+                <input class="form-control" type="text" id="account-fn" value="" required>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="account-ln">Last Name</label>
-                <input class="form-control" type="text" id="account-ln" value="Adams" required>
+                <input class="form-control" type="text" id="account-ln" value="" required>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="account-email">E-mail Address</label>
-                <input class="form-control" type="email" id="account-email" value="daniel.adams@example.com" disabled>
+                <input class="form-control" type="email" id="account-email" value="{{ user.email }}" disabled>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label for="account-phone">Phone Number</label>
+                <input class="form-control" type="text" id="account-phone" value="+7 (805) 348 95 72" required>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="account-email">Course</label>
+                <input class="form-control" type="email" id="account-email" value>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="account-phone">Program</label>
                 <input class="form-control" type="text" id="account-phone" value="+7 (805) 348 95 72" required>
               </div>
             </div>
